bootstrap/system/authentik/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: authentik-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:xBksEdejZ+zQBtV7Q0b0wndT2BEgMQzKcpjAsLE=,iv:+jLqD1ZpBCs9HgtzeWF7BqjhpnKGM6wJ/UT7w19hJN8=,tag:pqQPHUxj8fCe3eRtxhPPmw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:NmgpK71AIfzYLLiOWA2vSL/ZZEPwJVFn+UJ6Q+4=,iv:bCUEed1KMn2iIXYmPBr2tJy5i6Ee+3NeR+UtURs1Rqc=,tag:e+0vvi+htZU1BLwhlQSrPw==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLZnhIL05hQ3ZqOU1QK3Mv
[...]
            BMns2E+qW6Q2ov9LTa27NSSXWk7VR5/4kaMWZ5hB0wxCbgWcQBIiTQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-19T18:53:03Z"
    mac: ENC[AES256_GCM,data:gM5KeLQRmnjdSLULmkUkJMoQO4KZzjfwf32rU2I79EOMtYLCPBWRL3TH6b7k6QNSr8mlkX/NJCYFZnARfP5QHLKtDs5Jkk85Nh7zDI5D3U/lsAFs7bBkLvT5r5WPNouAQc1dlVApxNxXvaKjbeNeItk0ZgrK4CJ1uB261qQ9d0k=,iv:xL/AyYBGzyWAj1uYxoWfii2rBGMUW+P5OZykuKteXI0=,tag:WMN8cumuhkmlFNELrvAhwg==,type:str]
    pgp:
        - created_at: "2024-06-19T18:53:03Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/8Cn2U3Iu2FNHQwpg5DULYkirkmI2jBmRqFlqHilb/VrID
[...]
            =frxg
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
