bootstrap/system/authentik/resources/external-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: key.system.anotherlife.org.pl
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: key.system.anotherlife.org.pl
  sessionAffinity: None
