bootstrap/system/authentik/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:Sx6zbVlhufo4X7LK7quwHP6odrFE4bQfhw==,iv:ErwPhkzSYnlK+JoHyuSy/O6REVZVaKRIC+oezULp45A=,tag:vCRtTLV+GG2Iksn+Anm53Q==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: authentik
    namespace: authentik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:I6SqaPT0clONDJyVir6Vkv2XrBzTXF80ak77bkjCF9OMGA9S3g==,iv:kVzSoIuRLo+bDVLzIU2P/8yMzdQlLvTNWUVRJpnfGmI=,tag:SE+E57iFTp+GQO96miqZqw==,type:str]
          middlewares:
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: authentik-server
              port: 443
    tls:
        domains:
            - main: ENC[AES256_GCM,data:u2qfYcUVlS7GJWifiubaQayzfTsUktOT1A==,iv:rys03FjCO5YFzsomsItAgXXrYLuo/dXcel8PHkA+EUo=,tag:1MAKEdjTdJf9teXBTHuMFQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:i46A307CIuzNpGbyKzZSDDZOfYoBIkYAQp8=,iv:kLPHGbiXmGe5m8JrI5EArZSpTMuZKsQD49hFc+Nrvvo=,tag:szLJc0LgY++BuZyLB6x8cw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: authentik-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2024-06-30T14:07:39Z"
    mac: ENC[AES256_GCM,data:5p3sxFwqBawclsd35srb2RvgTZLwW6xYoiH+LbK3UxX7s/BD9kGcdqw13QIz3271eZOuJ1SrqcoPqghWtiZXxFUgcyLJAqBSRuluGOa+sEP8Nhl19GNZ7tHA/3tw7vr/TEcPw7q2Nde0X69drwHDr8kPUAmdLGZda0dFIC4b7Ok=,iv:r7nzJD+Jy8fGYJLBsYtYCLibcx/vjd3ZlP+jL3uzFqk=,tag:hmvqjZl1zgsjeUQ9CqLGWQ==,type:str]
    pgp:
        - created_at: "2024-06-30T14:07:39Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+M50oRrOZLORrfBv9Pw7Zczrmky0cPry8r6fSzKkFebip
[...]
            =VjVx
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
