bootstrap/system/authentik/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:xdEKV9DPnkpTQBLbKQJ3Guadi/F8sPXMDA==,iv:r5y/xwAQkqNkWzk84DsVy99BPBANoXG7YqnW9JUhXgg=,tag:L3atKrDmvxWujHQAQv38rg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: authentik-server
    name: authentik
    namespace: authentik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:qVgIPKvhVBLaJXd5Sf2a1IHLiD3ux3Aaw40+mFirv+Ow6/iP1w==,iv:4zBS1drqtY/yUJhcaBAWnVc9GhT1n2GL+NHgFyuvfd8=,tag:6Wn/Q67gl2AAIsYc8IAOGw==,type:str]
          # middlewares:
          #   - name: chain-traefik-dashboard
          #     namespace: traefik
          services:
            - kind: TraefikService
              name: authentik-server
              port: 443
    tls:
        domains:
            - main: ENC[AES256_GCM,data:CJj+Pq0j/ZX2BmaSnskemP46eq2rFRz4Tw==,iv:eT8GCHOu4kRH8z9+L5Plr2GMlxi5f9yqTwkQGuIMnZ4=,tag:FBWTBLqBqJ1DJnNICi3NrA==,type:str]
              sans:
                - ENC[AES256_GCM,data:ihuAZqLgMYKysnstzDZNsTJWcIADuH6ZFoY=,iv:QRzndT1T+Bft94SjE/9O/JYemthE5X1QGqQZSszbLlQ=,tag:iKL/0hXzuYLrn9OfvKF7RA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: authentik-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaZDBadkRJZTM1SjI0VFpz
[...]
            TOWvFRFOUZh9zeZrnU6CyuJyCh0VnKbJCOipr53TsuVBi1FajtvksA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-21T23:00:53Z"
    mac: ENC[AES256_GCM,data:fH/DeGJMvCBqN4Qs+UuH2DBJAUNVyBxEUPjS+yjBAVZj5/uoJBEP4cL3WjdypnfQVZd2W+EIXROJHplKJJDaR4uXmVTRW4r0DGCG+QkQfyiKPxp6ctaX9k0xpzuvxWTyo5Y8bYupQr6zWiTnRduVVpxcEMGaN1Yit/Xck5gTr20=,iv:2mw5OQEJ8uU0O+5fTLq35S2T01TGTRjk6pIdG2bXQok=,tag:i7wrQ10QqVt13wy92dQekg==,type:str]
    pgp:
        - created_at: "2024-06-21T23:00:53Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+Ox5KIzlVDnuOiSU8/B1O6hlNQ8dQh47MLc0749E9MS6h
[...]
            =J4rZ
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
