bootstrap/system/authentik/resources/ingressroute.staging.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "10"
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    external-dns.alpha.kubernetes.io/target: system.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: authentik-server
  name: authentik
  namespace: authentik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`key.system.anotherlife.org.pl`)
    # middlewares:
    #   - name: chain-traefik-dashboard
    #     namespace: traefik
    services:
    - kind: TraefikService
      name: authentik-server
      port: 443
  tls:
    domains:
    - main: system.anotherlife.org.pl
      sans:
      - .system.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: authentik-cf-staging
